--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -27,12 +27,18 @@
     web port = 901
 
 
-[videos]
-    path = /mnt/Others/Videos/
-    browseable = No
-
 [documents]
     path = /mnt/Others/Documents
+    guest only = Yes
+    guest ok = Yes
+
+[archive]
+    path = /mnt/Others/archives
+    guest ok = Yes
+    guest only = Yes
+
+[searchs]
+    path = /mnt/Others/searchs
     guest only = Yes
     guest ok = Yes
 
@@ -41,10 +47,14 @@
     browseable = No
     guest only = Yes
 
-[archive]
-    path = /mnt/Others/archives
-    guest ok = Yes
+[images]
+    path = /mnt/Others/Pictures
+    browseable = No
     guest only = Yes
+
+[videos]
+    path = /mnt/Others/Videos/
+    browseable = No
 
 [code]
     path = /mnt/Others/git
@@ -52,14 +62,16 @@
     read only = Yes
     browseable = No
 
-#[danger]
-#    path = /tmp/top_danger
-#    public = Yes
-#    guest ok = Yes
-#    read only = No
-#    writable = Yes
-#    create mask = 0664
-#    directory mask = 2775
+[danger]
+    path = /tmp/danger
+    browseable = No
+    public = Yes
+    guest ok = Yes
+    read only = No
+    writable = Yes
+    create mask = 0664
+    directory mask = 2775
+
 #============================ Share Definitions ==============================
 #[homes]
 #   comment = Home Directories
