update conky & sway & zsh profile config

--- a/~/.config/conky/conky.conf
+++ b/~/.config/conky/conky.conf
@@ -20,13 +20,13 @@ ${endif}
 
 # CPU temperature:
 {"full_text":"\uF109","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${acpitemp}<45}
+${if_match ${acpitemp} < 45}
 	{"full_text":"${acpitemp}°C","color":"\#909737","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${acpitemp}<55}
+${if_match ${acpitemp} < 55}
 	{"full_text":"${acpitemp}°C","color":"\#b27d12","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${acpitemp}>=55}
+${if_match ${acpitemp} >= 55}
 	{"full_text":"${acpitemp}°C","color":"\#a25030","separator":false,"separator_block_width":6},
 ${else}
 ${endif}${endif}${endif}
@@ -37,58 +37,58 @@ ${endif}${endif}${endif}
 
 # Download:
 {"full_text":"\uF0ed","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${downspeedf enp9s0}>0}
-	${if_match ${downspeedf enp9s0}<1000}
+${if_match ${downspeedf enp9s0} > 0}
+	${if_match ${downspeedf enp9s0} < 1000}
 		{"full_text":"${downspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${downspeedf enp9s0}<3000}
+	${if_match ${downspeedf enp9s0} < 3000}
 		{"full_text":"${downspeed enp9s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${downspeedf enp9s0}>=3000}
+	${if_match ${downspeedf enp9s0} >= 3000}
 		{"full_text":"${downspeed enp9s0}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}${endif}${endif}
 ${else}
-${if_match ${downspeedf wlp8s0}>0}
-	${if_match ${downspeedf wlp8s0}<1000}
+${if_match ${downspeedf wlp8s0} > 0}
+	${if_match ${downspeedf wlp8s0} < 1000}
 		{"full_text":"${downspeed wlp8s0}","color":"\#909737","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${downspeedf wlp8s0}<3000}
+	${if_match ${downspeedf wlp8s0} < 3000}
 		{"full_text":"${downspeed wlp8s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${downspeedf wlp8s0}>=3000}
+	${if_match ${downspeedf wlp8s0} >= 3000}
 		{"full_text":"${downspeed wlp8s0}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}${endif}${endif}
 ${else}
-${if_match ${downspeedf enp0s26u1u2}>0}
-	${if_match ${downspeedf enp0s26u1u2}<1000}
+${if_match ${downspeedf enp0s26u1u2} > 0}
+	${if_match ${downspeedf enp0s26u1u2} < 1000}
 		{"full_text":"${downspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${downspeedf enp0s26u1u2}<3000}
+	${if_match ${downspeedf enp0s26u1u2} < 3000}
 		{"full_text":"${downspeed enp0s26u1u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${downspeedf enp0s26u1u2}>=3000}
+	${if_match ${downspeedf enp0s26u1u2} >= 3000}
 		{"full_text":"${downspeed enp0s26u1u2}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}${endif}${endif}
 ${else}
-${if_match ${downspeedf enp0s20u1}>0}
-	${if_match ${downspeedf enp0s20u1}<1000}
+${if_match ${downspeedf enp0s20u1} > 0}
+	${if_match ${downspeedf enp0s20u1} < 1000}
 		{"full_text":"${downspeed enp0s20u1}","color":"\#909737","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${downspeedf enp0s20u1}<3000}
+	${if_match ${downspeedf enp0s20u1} < 3000}
 		{"full_text":"${downspeed enp0s20u1}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${downspeedf enp0s20u1}>=3000}
+	${if_match ${downspeedf enp0s20u1} >= 3000}
 		{"full_text":"${downspeed enp0s20u1}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}${endif}${endif}
 ${else}
-${if_match ${downspeedf enp0s20u2}>0}
-	${if_match ${downspeedf enp0s20u2}<1000}
+${if_match ${downspeedf enp0s20u2} > 0}
+	${if_match ${downspeedf enp0s20u2} < 1000}
 		{"full_text":"${downspeed enp0s20u2}","color":"\#909737","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${downspeedf enp0s20u2}<3000}
+	${if_match ${downspeedf enp0s20u2} < 3000}
 		{"full_text":"${downspeed enp0s20u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${downspeedf enp0s20u2}>=3000}
+	${if_match ${downspeedf enp0s20u2} >= 3000}
 		{"full_text":"${downspeed enp0s20u2}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}${endif}${endif}
 ${else}
@@ -97,58 +97,58 @@ ${endif}${endif}${endif}${endif}${endif}
 
 # Upload:
 {"full_text":"\uF0ee","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${upspeedf enp9s0}>0}
-	${if_match ${upspeedf enp9s0}<1000}
+${if_match ${upspeedf enp9s0} > 0}
+	${if_match ${upspeedf enp9s0} < 1000}
 		{"full_text":"${upspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${upspeedf enp9s0}<3000}
+	${if_match ${upspeedf enp9s0} < 3000}
 		{"full_text":"${upspeed enp9s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${upspeedf enp9s0}>=3000}
+	${if_match ${upspeedf enp9s0} >= 3000}
 		{"full_text":"${upspeed enp9s0}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}${endif}${endif}
 ${else}
-${if_match ${upspeedf wlp8s0}>0}
-	${if_match ${upspeedf wlp8s0}<1000}
+${if_match ${upspeedf wlp8s0} > 0}
+	${if_match ${upspeedf wlp8s0} < 1000}
 		{"full_text":"${upspeed wlp8s0}","color":"\#909737","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${upspeedf wlp8s0}<3000}
+	${if_match ${upspeedf wlp8s0} < 3000}
 		{"full_text":"${upspeed wlp8s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${upspeedf wlp8s0}>=3000}
+	${if_match ${upspeedf wlp8s0} >= 3000}
 		{"full_text":"${upspeed wlp8s0}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}${endif}${endif}
 ${else}
-${if_match ${upspeedf enp0s26u1u2}>0}
-	${if_match ${upspeedf enp0s26u1u2}<1000}
+${if_match ${upspeedf enp0s26u1u2} > 0}
+	${if_match ${upspeedf enp0s26u1u2} < 1000}
 		{"full_text":"${upspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${upspeedf enp0s26u1u2}<3000}
+	${if_match ${upspeedf enp0s26u1u2} < 3000}
 		{"full_text":"${upspeed enp0s26u1u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${upspeedf enp0s26u1u2}>=3000}
+	${if_match ${upspeedf enp0s26u1u2} >= 3000}
 		{"full_text":"${upspeed enp0s26u1u2}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}${endif}${endif}
 ${else}
-${if_match ${upspeedf enp0s20u1}>0}
-	${if_match ${upspeedf enp0s20u1}<1000}
+${if_match ${upspeedf enp0s20u1} > 0}
+	${if_match ${upspeedf enp0s20u1} < 1000}
 		{"full_text":"${upspeed enp0s20u1}","color":"\#909737","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${upspeedf enp0s20u1}<3000}
+	${if_match ${upspeedf enp0s20u1} < 3000}
 		{"full_text":"${upspeed enp0s20u1}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${upspeedf enp0s20u1}>=3000}
+	${if_match ${upspeedf enp0s20u1} >= 3000}
 		{"full_text":"${upspeed enp0s20u1}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}${endif}${endif}
 ${else}
-${if_match ${upspeedf enp0s20u2}>0}
-	${if_match ${upspeedf enp0s20u2}<1000}
+${if_match ${upspeedf enp0s20u2} > 0}
+	${if_match ${upspeedf enp0s20u2} < 1000}
 		{"full_text":"${upspeed enp0s20u2}","color":"\#909737","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${upspeedf enp0s20u2}<3000}
+	${if_match ${upspeedf enp0s20u2} < 3000}
 		{"full_text":"${upspeed enp0s20u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-	${if_match ${upspeedf enp0s20u2}>=3000}
+	${if_match ${upspeedf enp0s20u2} >= 3000}
 		{"full_text":"${upspeed enp0s20u2}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}${endif}${endif}
 ${else}
@@ -157,25 +157,25 @@ ${endif}${endif}${endif}${endif}${endif}
 
 # Memory: \uF30d \uF00A \uf233
 {"full_text":"\uF30d","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${memperc}<30}
+${if_match ${memperc} < 30}
 	{"full_text":" ${memeasyfree}","color":"\#909737","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${memperc}<70}
+${if_match ${memperc} < 70}
 	{"full_text":" ${memeasyfree}","color":"\#b27d12","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${memperc}>=70}
+${if_match ${memperc} >= 70}
 	{"full_text":" ${memeasyfree}","color":"\#924020","separator":false,"separator_block_width":6},
 ${endif}${endif}${endif}
 
 # CPU:
 {"full_text":"\uF0e4","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${cpu cpu0}<50}
+${if_match ${cpu cpu0} < 50}
 	{"full_text":"${cpu cpu0}%","color":"\#909737","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${cpu cpu0}<60E}
+${if_match ${cpu cpu0} < 60E}
 	{"full_text":"${cpu cpu0}%","color":"\#b27d12","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${cpu cpu0}<=100}
+${if_match ${cpu cpu0} <= 100}
 	{"full_text":"${cpu cpu0}%","color":"\#924020","separator":false,"separator_block_width":6},
 ${endif}${endif}${endif}
 
@@ -184,23 +184,23 @@ ${endif}${endif}${endif}
 #{"full_text":"${execpi 120 ~/.config/conky/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},
 # Mail: \uF1fa
 {"full_text":"\uF3e5","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${new_mails mail 30} <= 0}
-	{"full_text":"${new_mails mail 30}","color":"\#909737","separator":false,"separator_block_width":6},
+${if_match ${new_mails $HOME/mail 30} <= 0}
+	{"full_text":"${new_mails $HOME/mail 30}","color":"\#909737","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${new_mails mail 30} <= 2}
-	{"full_text":"${new_mails mail 30}","color":"\#b27d12","separator":false,"separator_block_width":6},
+${if_match ${new_mails $HOME/mail 30} <= 2}
+	{"full_text":"${new_mails $HOME/mail 30}","color":"\#b27d12","separator":false,"separator_block_width":6},
 ${else}
-	{"full_text":"${new_mails mail 30}","color":"\#924020","separator":false,"separator_block_width":6},
+	{"full_text":"${new_mails $HOME/mail 30}","color":"\#924020","separator":false,"separator_block_width":6},
 ${endif}
 ${endif}
 
 # RSS
 {"full_text":"\uF09e","color":"\#949494","separator":false,"separator_block_width":6},
 ${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} > 0}
-	${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}<=10}
-		{"full_text":"${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} <= 10}
+		{"full_text":"${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-		{"full_text":"${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*"}","color":"\#924020","separator":false,"separator_block_width":6},
+		{"full_text":"${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}
 ${else}
 	{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
@@ -214,13 +214,13 @@ ${endif}
 
 # Battery: \uf214 \uf0e7
 {"full_text":"\uF0e7","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${battery_percent}<30}
+${if_match ${battery_percent} < 30}
 	{"full_text":"${battery_percent}%","color":"\#924020","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${battery_percent}<70}
+${if_match ${battery_percent} < 70}
 	{"full_text":"${battery_percent}%","color":"\#b27d12","separator":false,"separator_block_width":6},
 ${else}
-${if_match ${battery_percent}>=70}
+${if_match ${battery_percent} >= 70}
 	{"full_text":"${battery_percent}%","color":"\#909737","separator":false,"separator_block_width":6},
 ${endif}${endif}${endif}
 
