--- a/~/.config/sway/config
+++ b/~/.config/sway/config
@@ -234,11 +234,11 @@ workspace $ws10 output LVDS1
     bindsym $mod+Shift+9 move container to workspace $ws9
     bindsym $mod+Shift+0 move container to workspace $ws10
 
-exec --no-startup-id i3-msg "workspace 1:  TERM"
+exec --no-startup-id i3-msg 'workspace "1:&#xf120;  TERM"'
 
-for_window [window_role="pop-up"] floating enable
-for_window [window_role="task_dialog"] floating enable
-for_window [window_role="About"] floating enable
+# for_window [window_role="pop-up"] floating enable
+# for_window [window_role="task_dialog"] floating enable
+# for_window [window_role="About"] floating enable
 
 output * bg /mnt/Others/Pictures/archlinux_1.jpg fill
 #output * bg /usr/share/sway/wallpaper.jpg fill
