update i3 & conky config

--- a/~/.config/conky/conky.conf
+++ b/~/.config/conky/conky.conf
@@ -8,7 +8,20 @@ conky.config = {
 	update_interval_on_battery = 3,
 	override_utf8_locale = true,
 	format_human_readable = true,
-	use_xft = true
+	use_xft = true,
+	template0 = [[
+${if_match ${\1speedf \2} > 0}
+	${if_match ${\1speedf \2} < 1000}
+		{"full_text":"${\1speed \2}","color":"\\#909737","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${\1speedf \2} < 3000}
+		{"full_text":"${\1speed \2}","color":"\\#b27d12","separator":false,"separator_block_width":6},
+	${else}
+	${if_match ${\1speedf \2} >= 3000}
+		{"full_text":"${\1speed \2}","color":"\\#924020","separator":false,"separator_block_width":6},
+	${endif}${endif}${endif}
+${else}
+]]
 };
 
 conky.text = [[
@@ -37,122 +50,22 @@ ${endif}${endif}${endif}
 
 # Download:
 {"full_text":"\uF0ed","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${downspeedf enp9s0} > 0}
-	${if_match ${downspeedf enp9s0} < 1000}
-		{"full_text":"${downspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${downspeedf enp9s0} < 3000}
-		{"full_text":"${downspeed enp9s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${downspeedf enp9s0} >= 3000}
-		{"full_text":"${downspeed enp9s0}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}${endif}${endif}
-${else}
-${if_match ${downspeedf wlp8s0} > 0}
-	${if_match ${downspeedf wlp8s0} < 1000}
-		{"full_text":"${downspeed wlp8s0}","color":"\#909737","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${downspeedf wlp8s0} < 3000}
-		{"full_text":"${downspeed wlp8s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${downspeedf wlp8s0} >= 3000}
-		{"full_text":"${downspeed wlp8s0}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}${endif}${endif}
-${else}
-${if_match ${downspeedf enp0s26u1u2} > 0}
-	${if_match ${downspeedf enp0s26u1u2} < 1000}
-		{"full_text":"${downspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${downspeedf enp0s26u1u2} < 3000}
-		{"full_text":"${downspeed enp0s26u1u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${downspeedf enp0s26u1u2} >= 3000}
-		{"full_text":"${downspeed enp0s26u1u2}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}${endif}${endif}
-${else}
-${if_match ${downspeedf enp0s20u1} > 0}
-	${if_match ${downspeedf enp0s20u1} < 1000}
-		{"full_text":"${downspeed enp0s20u1}","color":"\#909737","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${downspeedf enp0s20u1} < 3000}
-		{"full_text":"${downspeed enp0s20u1}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${downspeedf enp0s20u1} >= 3000}
-		{"full_text":"${downspeed enp0s20u1}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}${endif}${endif}
-${else}
-${if_match ${downspeedf enp0s20u2} > 0}
-	${if_match ${downspeedf enp0s20u2} < 1000}
-		{"full_text":"${downspeed enp0s20u2}","color":"\#909737","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${downspeedf enp0s20u2} < 3000}
-		{"full_text":"${downspeed enp0s20u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${downspeedf enp0s20u2} >= 3000}
-		{"full_text":"${downspeed enp0s20u2}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}${endif}${endif}
-${else}
-	{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
+${template0 down enp9s0}
+${template0 down wlp8s0}
+${template0 down enp0s26u1u2}
+${template0 down enp0s20u1}
+${template0 down enp0s20u2}
+{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
 ${endif}${endif}${endif}${endif}${endif}
 
 # Upload:
 {"full_text":"\uF0ee","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${upspeedf enp9s0} > 0}
-	${if_match ${upspeedf enp9s0} < 1000}
-		{"full_text":"${upspeed enp9s0}","color":"\#909737","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${upspeedf enp9s0} < 3000}
-		{"full_text":"${upspeed enp9s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${upspeedf enp9s0} >= 3000}
-		{"full_text":"${upspeed enp9s0}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}${endif}${endif}
-${else}
-${if_match ${upspeedf wlp8s0} > 0}
-	${if_match ${upspeedf wlp8s0} < 1000}
-		{"full_text":"${upspeed wlp8s0}","color":"\#909737","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${upspeedf wlp8s0} < 3000}
-		{"full_text":"${upspeed wlp8s0}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${upspeedf wlp8s0} >= 3000}
-		{"full_text":"${upspeed wlp8s0}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}${endif}${endif}
-${else}
-${if_match ${upspeedf enp0s26u1u2} > 0}
-	${if_match ${upspeedf enp0s26u1u2} < 1000}
-		{"full_text":"${upspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${upspeedf enp0s26u1u2} < 3000}
-		{"full_text":"${upspeed enp0s26u1u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${upspeedf enp0s26u1u2} >= 3000}
-		{"full_text":"${upspeed enp0s26u1u2}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}${endif}${endif}
-${else}
-${if_match ${upspeedf enp0s20u1} > 0}
-	${if_match ${upspeedf enp0s20u1} < 1000}
-		{"full_text":"${upspeed enp0s20u1}","color":"\#909737","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${upspeedf enp0s20u1} < 3000}
-		{"full_text":"${upspeed enp0s20u1}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${upspeedf enp0s20u1} >= 3000}
-		{"full_text":"${upspeed enp0s20u1}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}${endif}${endif}
-${else}
-${if_match ${upspeedf enp0s20u2} > 0}
-	${if_match ${upspeedf enp0s20u2} < 1000}
-		{"full_text":"${upspeed enp0s20u2}","color":"\#909737","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${upspeedf enp0s20u2} < 3000}
-		{"full_text":"${upspeed enp0s20u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-	${if_match ${upspeedf enp0s20u2} >= 3000}
-		{"full_text":"${upspeed enp0s20u2}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}${endif}${endif}
-${else}
-	{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
+${template0 up enp9s0}
+${template0 up wlp8s0}
+${template0 up enp0s26u1u2}
+${template0 up enp0s20u1}
+${template0 up enp0s20u2}
+{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
 ${endif}${endif}${endif}${endif}${endif}
 
 # Memory: \uF30d \uF00A \uf233
@@ -181,7 +94,7 @@ ${endif}${endif}${endif}
 
 # Weather: \uF3b6
 #{"full_text":"\uF185","color":"\#949494","separator":false,"separator_block_width":6},
-#{"full_text":"${execpi 120 ~/.config/conky/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},
+#{"full_text":"${execi 120 ~/.config/conky/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},
 # Mail: \uF1fa
 {"full_text":"\uF3e5","color":"\#949494","separator":false,"separator_block_width":6},
 ${if_match ${new_mails $HOME/mail 30} <= 0}
@@ -196,11 +109,11 @@ ${endif}
 
 # RSS
 {"full_text":"\uF09e","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} > 0}
-	${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} <= 10}
-		{"full_text":"${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#b27d12","separator":false,"separator_block_width":6},
+${if_match ${texeci 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} > 0}
+	${if_match ${texeci 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} <= 10}
+		{"full_text":"${texeci 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-		{"full_text":"${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#924020","separator":false,"separator_block_width":6},
+		{"full_text":"${texeci 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}
 ${else}
 	{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
@@ -208,9 +121,9 @@ ${endif}
 
 #TODO.TXT
 {"full_text":"\uF03A","color":"\#949494","separator":false,"separator_block_width":6},
-{"full_text":"${execpi 30 todo.sh ls | grep -i "(A)" | wc -l}","color":"\#924020","separator":false,"separator_block_width":6},
-{"full_text":"${execpi 30 todo.sh ls | grep -i "(B)" | wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},
-{"full_text":"${execpi 30 todo.sh ls | wc -l}","color":"\#909737","separator":false,"separator_block_width":6},
+{"full_text":"${execi 30 todo.sh ls | grep -i "(A)" | wc -l}","color":"\#924020","separator":false,"separator_block_width":6},
+{"full_text":"${execi 30 todo.sh ls | grep -i "(B)" | wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},
+{"full_text":"${execi 30 todo.sh ls | wc -l}","color":"\#909737","separator":false,"separator_block_width":6},
 
 # Battery: \uf214 \uf0e7
 {"full_text":"\uF0e7","color":"\#949494","separator":false,"separator_block_width":6},
