--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -24,6 +24,14 @@ ${else}
 ]]
 };
 
+-- String to insert at startup for i3bar
+-- Begin the endless array.
+print('{"version":1}');
+-- Begin the endless array.
+print('[');
+-- We send an empty first array of blocks to make the loop simpler:
+print('[],');
+
 conky.text = [[
 [
 # MPD
@@ -46,7 +54,7 @@ ${endif}${endif}${endif}
 
 #NETWORK STRENGTH \uF012
 {"full_text":"\uF1eb","color":"\#949494","separator":false,"separator_block_width":6},
-{"full_text":"${execi 2 ~/.config/conky/getNetwokStrength.sh}","color":"\#909737","separator":false},
+{"full_text":"${execi 2 ~/.config/i3/getNetwokStrength.sh}","color":"\#909737","separator":false},
 
 # Download:
 {"full_text":"\uF0ed","color":"\#949494","separator":false,"separator_block_width":6},
@@ -93,8 +101,9 @@ ${if_match ${cpu cpu0} <= 100}
 ${endif}${endif}${endif}
 
 # Weather: \uF3b6
-#{"full_text":"\uF185","color":"\#949494","separator":false,"separator_block_width":6},
-#{"full_text":"${execi 120 ~/.config/conky/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},
+{"full_text":"\uF185","color":"\#949494","separator":false,"separator_block_width":6},
+{"full_text":"${texeci 120 ~/.config/i3/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},
+
 # Mail: \uF1fa
 {"full_text":"\uF3e5","color":"\#949494","separator":false,"separator_block_width":6},
 ${if_match ${new_mails $HOME/mail 30} <= 0}
