update gtk3 & i3 & sway & qutebrowser & vifm & tmux & zsh config

--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -350,7 +350,7 @@ hide-wayland-decoration = true
 do-not-track = true
 accept-language = en-US,en,fr,ar
 referer-header = same-domain
-user-agent = 
+user-agent = Mozilla/5.0 (Unknown; Linux x86_64) AppleWebKit/601.2.7 (KHTML, like Gecko) qutebrowser/0.6.2 Safari/601.2.7
 proxy = system
 proxy-dns-requests = true
 ssl-strict = ask
