--- a/~/.tmux.conf
+++ b/~/.tmux.conf
@@ -1,14 +1,14 @@
 set -g status off
 set -g default-terminal "screen-256color"
-set -g utf8
-set-window-option -g utf8 on
+# set -g utf8
+# set-window-option -g utf8 on
 set -g history-limit 20000
 setw -g mode-keys vi
 setw -g aggressive-resize on
 
 # explicitly disable mouse control
 set -g mouse on
-set -g mouse-utf8 on
+# set -g mouse-utf8 on
 bind -n WheelUpPane copy-mode -e
 #setw -g mode-mouse on
 #set -g mouse-select-pane on
