--- a/~/.config/i3/config
+++ b/~/.config/i3/config
@@ -27,6 +27,7 @@ font xft:Cousine, Icons 7
 floating_modifier $mod
 
     bindsym $mod+Return exec i3-sensible-terminal -e $HOME/.config/i3/MAIN.sh
+    bindsym $mod+b exec $BROWSER
     bindsym $mod+Shift+q kill
     bindsym $mod+d exec dmenu_run
 
@@ -140,6 +141,62 @@ bar {
 	}
 }
 
+focus_follows_mouse no
+new_window pixel 1
+new_float pixel 1
+# Move i3 independent X apps to xinitrc
+# exec --no-startup-id /usr/bin/xrdb /home/lejenome/.Xresources
+#exec --no-startup-id /usr/bin/setxkbmap fr
+#exec --no-startup-id urxvtd -q -o
+#exec --no-startup-id xset dpms 300 360 420
+
+# Workspace names
+set $ws1  1:  TERM
+set $ws2  2: WEB
+set $ws3  3: WORK
+set $ws4  4: OTHER
+set $ws5  5:
+set $ws6  6:
+set $ws7  7:
+set $ws8  8:
+set $ws9  9:
+set $ws10 10:
+
+workspace "$ws1"  output LVDS-1
+workspace "$ws2"  output LVDS-1
+workspace "$ws3"  output LVDS-1
+workspace "$ws4"  output LVDS-1
+workspace "$ws5"  output LVDS-1
+workspace "$ws6"  output LVDS-1
+workspace "$ws7"  output LVDS-1
+workspace "$ws8"  output LVDS-1
+workspace "$ws9"  output LVDS-1
+workspace "$ws10" output LVDS-1
+
+# switch to workspace
+    bindsym $mod+ampersand   workspace "$ws1"
+    bindsym $mod+eacute      workspace "$ws2"
+    bindsym $mod+quotedbl    workspace "$ws3"
+    bindsym $mod+apostrophe  workspace "$ws4"
+    bindsym $mod+parenleft   workspace "$ws5"
+    bindsym $mod+minus       workspace "$ws6"
+    bindsym $mod+egrave      workspace "$ws7"
+    bindsym $mod+underscore  workspace "$ws8"
+    bindsym $mod+ccedilla    workspace "$ws9"
+    bindsym $mod+agrave      workspace "$ws10"
+
+# move focused container to workspace
+    bindsym $mod+Shift+ampersand   move container to workspace "$ws1"
+    bindsym $mod+Shift+eacute      move container to workspace "$ws2"
+    bindsym $mod+Shift+quotedbl    move container to workspace "$ws3"
+    bindsym $mod+Shift+apostrophe  move container to workspace "$ws4"
+    bindsym $mod+Shift+parenleft   move container to workspace "$ws5"
+    bindsym $mod+Shift+minus       move container to workspace "$ws6"
+    bindsym $mod+Shift+egrave      move container to workspace "$ws7"
+    bindsym $mod+Shift+underscore  move container to workspace "$ws8"
+    bindsym $mod+Shift+ccedilla    move container to workspace "$ws9"
+    bindsym $mod+Shift+agrave      move container to workspace "$ws10"
+
 # /usr/include/X11/XF86keysym.h && xmodmap -pke
     bindsym XF86AudioMute exec "amixer set Master toggle"
     bindsym XF86AudioRaiseVolume exec "amixer set Master 5%+"
@@ -159,13 +216,13 @@ bar {
 # FIXME: FN + F4
 # bindsym 0xffc1        exec  "~/.config/i3/toggle-display"
     bindsym XF86Mail      exec  "getmails"
-    bindsym XF86HomePage  exec  "i3-msg 'workspace 2:  TERM'"
+    bindsym XF86HomePage  exec  "i3-msg \"workspace $ws2\""
     bindsym XF86Explorer  exec  "urxvt-vifm"
 
 
     bindsym $mod+Shift+m exec sh ~/.config/i3/keymouse.sh
     bindsym $mod+Shift+t exec i3-sensible-terminal -e ~/.config/i3/TERM.sh
-    bindsym $mod+Shift+w exec ~/.config/i3/load_web_ws_layout.sh
+    bindsym $mod+Shift+w exec ~/.config/i3/load_web_ws_layout.sh "$ws2"
 
 # Going Back and Forth
     bindsym $mod+z workspace back_and_forth
@@ -178,62 +235,7 @@ bar {
     bindsym $mod+m exec i3-input -F 'mark %s' -P 'Mark name: '
     bindsym $mod+g exec i3-input -F '[con_mark=%s] focus' -P 'Go to mark: '
 
-focus_follows_mouse no
-new_window pixel 1
-new_float pixel 1
-# Move i3 independent X apps to xinitrc
-#exec --no-startup-id /usr/bin/setxkbmap fr
-#exec --no-startup-id urxvtd -q -o
-#exec --no-startup-id xset dpms 300 360 420
-
-# Workspace names
-set $ws1 "1:&#xf120;  TERM"
-set $ws2 "2:&#xf0ac;  WEB"
-set $ws3 "3:&#xf085;  WORK"
-set $ws4 "4:&#xf07b;  OTHER"
-set $ws5 "5:&#xf120;"
-set $ws6 "6:&#xf121;"
-set $ws7 "7:&#xf269;"
-set $ws8 "8:&#xf17e;"
-set $ws9 "9:&#xf0e0;"
-set $ws10 "10:&#xf15b;"
-
-workspace $ws1 output LVDS1
-workspace $ws2 output LVDS1
-workspace $ws3 output LVDS1
-workspace $ws4 output LVDS1
-workspace $ws5 output LVDS1
-workspace $ws6 output LVDS1
-workspace $ws7 output LVDS1
-workspace $ws8 output LVDS1
-workspace $ws9 output LVDS1
-workspace $ws10 output LVDS1
-
-# switch to workspace
-    bindsym $mod+1 workspace $ws1
-    bindsym $mod+2 workspace $ws2
-    bindsym $mod+3 workspace $ws3
-    bindsym $mod+4 workspace $ws4
-    bindsym $mod+5 workspace $ws5
-    bindsym $mod+6 workspace $ws6
-    bindsym $mod+7 workspace $ws7
-    bindsym $mod+8 workspace $ws8
-    bindsym $mod+9 workspace $ws9
-    bindsym $mod+0 workspace $ws10
-
-# move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace $ws1
-    bindsym $mod+Shift+2 move container to workspace $ws2
-    bindsym $mod+Shift+3 move container to workspace $ws3
-    bindsym $mod+Shift+4 move container to workspace $ws4
-    bindsym $mod+Shift+5 move container to workspace $ws5
-    bindsym $mod+Shift+6 move container to workspace $ws6
-    bindsym $mod+Shift+7 move container to workspace $ws7
-    bindsym $mod+Shift+8 move container to workspace $ws8
-    bindsym $mod+Shift+9 move container to workspace $ws9
-    bindsym $mod+Shift+0 move container to workspace $ws10
-
-exec --no-startup-id i3-msg 'workspace "1:&#xf120;  TERM"'
+exec --no-startup-id "i3-msg workspace \"$ws1\""
 
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
