--- a/~/.config/sway/config
+++ b/~/.config/sway/config
@@ -27,6 +27,7 @@ font xft:Cousine, Icons 7
 floating_modifier $mod
 
     bindsym $mod+Return exec i3-sensible-terminal -e $HOME/.config/i3/MAIN.sh
+    bindsym $mod+b exec $BROWSER
     bindsym $mod+Shift+q kill
     bindsym $mod+d exec dmenu_run
 
@@ -221,7 +222,7 @@ workspace "$ws10" output LVDS-1
 
     bindsym $mod+Shift+m exec sh ~/.config/i3/keymouse.sh
     bindsym $mod+Shift+t exec i3-sensible-terminal -e ~/.config/i3/TERM.sh
-    bindsym $mod+Shift+w exec ~/.config/i3/load_web_ws_layout.sh
+    bindsym $mod+Shift+w exec ~/.config/i3/load_web_ws_layout.sh "$ws2"
 
 # Going Back and Forth
     bindsym $mod+z workspace back_and_forth
@@ -234,7 +235,7 @@ workspace "$ws10" output LVDS-1
     bindsym $mod+m exec i3-input -F 'mark %s' -P 'Mark name: '
     bindsym $mod+g exec i3-input -F '[con_mark=%s] focus' -P 'Go to mark: '
 
-exec --no-startup-id i3-msg "workspace $1"
+exec --no-startup-id i3-msg "workspace $ws1"
 
 # for_window [window_role="pop-up"] floating enable
 # for_window [window_role="task_dialog"] floating enable
@@ -242,3 +243,6 @@ exec --no-startup-id i3-msg "workspace $1"
 
 output * bg /mnt/Others/Pictures/archlinux_1.jpg fill
 #output * bg /usr/share/sway/wallpaper.jpg fill
+
+# smart_gaps on
+# gaps 15
