update qutebrowser & zsh configé

--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -154,7 +154,7 @@
 #     Default: path,query
 ignore-case = smart
 wrap-search = true
-startpage = https://mail.google.com, about:blank
+startpage = https://mail.google.com
 default-page = about:blank
 auto-search = naive
 auto-save-config = true
