update qutebrowser & i3 & sway config

--- a/~/.config/qutebrowser/qsettings/QtProject.conf
+++ b/~/.config/qutebrowser/qsettings/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/lejenome
-lastVisited=file:///home/lejenome
+history=file:///home/lejenome, file:///home/lejenome/searchs/lfi2/theoreme_langue, file:///home/lejenome/Documents/algo
+lastVisited=file:///home/lejenome/Documents/algo
 qtVersion=5.6.0
 shortcuts=file:, file:///home/lejenome
 sidebarWidth=90
