--- a/~/.config/i3/config
+++ b/~/.config/i3/config
@@ -241,3 +241,4 @@ exec --no-startup-id "i3-msg workspace \"$ws1\""
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [window_role="About"] floating enable
+for_window [class="mpv"] floating enable
