--- a/~/.config/sway/config
+++ b/~/.config/sway/config
@@ -242,6 +242,7 @@ exec --no-startup-id i3-msg "workspace $ws1"
 # for_window [window_role="pop-up"] floating enable
 # for_window [window_role="task_dialog"] floating enable
 # for_window [window_role="About"] floating enable
+for_window [class="mpv"] floating enable
 
 output * bg /mnt/Others/Pictures/archlinux_1.jpg fill
 #output * bg /usr/share/sway/wallpaper.jpg fill
