update qutebrowser, todo & vim & vifm config

--- a/~/.todo.cfg
+++ b/~/.todo.cfg
@@ -1,4 +1,4 @@
-export TODO_DIR=~/Public
+export TODO_DIR=~/git/mind/
 
 export TODO_FILE="$TODO_DIR/todo.txt"
 export DONE_FILE="$TODO_DIR/done.txt"
