--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -297,7 +297,7 @@ zoom-text-only = false
 frame-flattening = false
 user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
 css-media-type = 
-smooth-scrolling = true
+smooth-scrolling = false
 remove-finished-downloads = -1
 hide-statusbar = false
 statusbar-padding = 1,1,0,0
