update qutebrowser & vifm & mr & zsh configs

--- a/~/.config/qutebrowser/qutebrowser.conf
+++ b/~/.config/qutebrowser/qutebrowser.conf
@@ -298,7 +298,7 @@ frame-flattening = false
 user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
 css-media-type = 
 smooth-scrolling = false
-remove-finished-downloads = -1
+remove-finished-downloads = 5000
 hide-statusbar = false
 statusbar-padding = 1,1,0,0
 window-title-format = {perc}{title}{title_sep}qutebrowser
@@ -362,9 +362,9 @@ do-not-track = true
 accept-language = en-US,en,fr,ar
 referer-header = same-domain
 user-agent = Mozilla/5.0 (Unknown; Linux x86_64) AppleWebKit/601.2.7 (KHTML, like Gecko) qutebrowser/0.6.2 Safari/601.2.7
-proxy = system
+proxy = http://127.0.0.1:3128
 proxy-dns-requests = true
-ssl-strict = ask
+ssl-strict = false
 dns-prefetch = true
 custom-headers = 
 
