--- a/etc/resolv.conf
+++ b/etc/resolv.conf
@@ -1,3 +1,4 @@
+#nameserver 192.168.10.1  # Bibliotheque Regionale de Sfax
 #nameserver 192.168.1.1  # router and 3g
 #nameserver 10.30.0.11   # school internal DNS
 nameserver 127.0.0.1    # dnsmasq
