update aria2c & conky & mpv & pep8 & qutebrowser & transmission & vifm & vim & zsh configs

--- a/~/.config/aria2/aria2.conf
+++ b/~/.config/aria2/aria2.conf
@@ -1,14 +1,18 @@
+# vim: ft=conf
 dir=Downloads/
 continue
 log-level=warn
 max-connection-per-server=4
 file-allocation=falloc
-user-agent=Wget
+user-agent=Mozilla/5.0
 max-upload-limit=1K
 max-overall-upload-limit=1K
 seed-time=0
-disable-ipv6
+#disable-ipv6
+enable-http-pipelining=true
+max-concurrent-downloads=5
 
+# Daemon
 #save-session=${HOME}/Downloads/.aria2.session
 #input-file=${HOME}/Downloads/.aria2.session
 #enable-rpc=true
@@ -17,7 +21,13 @@ disable-ipv6
 #daemon=true
 
 #retry-wait=10
-#max-concurrent-downloads=5
-all-proxy=http://11050096@lo66e3z9@10.100.0.1:8080
+#all-proxy=http://11050096@lo66e3z9@10.100.0.1:8080
 #max-tries=5
 #min-split-size=20M
+
+# BitTorrent
+max-upload-limit=5K
+seed-ratio=0.0
+seed-time=0
+bt-max-peers=500
+bt-request-peer-speed-limit=1M
