--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -134,6 +134,9 @@ ${endif}
 {"full_text":"${execi 30 todo.sh ls | grep -i "(B)" | wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},
 {"full_text":"${execi 30 todo.sh ls | wc -l}","color":"\#909737","separator":false,"separator_block_width":6},
 
+{"full_text":"\uF019","color":"\#949494","separator":false,"separator_block_width":6},
+${execi 10 ~/.config/i3/aria2c-stat.py }
+
 # Battery: \uf214 \uf0e7
 {"full_text":"\uF0e7","color":"\#949494","separator":false,"separator_block_width":6},
 ${if_match ${battery_percent} < 30}
