--- a/~/.config/mpv/mpv.conf
+++ b/~/.config/mpv/mpv.conf
@@ -13,9 +13,9 @@ slang = en,fr,ar #DVD: prefer english subtitles
 alang = en,fr,ar #DVD: prefer english audio tracks
 
 ao = alsa,openal,pulse,
-vo = vdpau,opengl-hd,opengl,x11,wayland,drm,
+vo = vdpau,opengl-hd,opengl,xv,wayland,drm,
 #framedrop = vo
-softvol-max=600
+volume-max=600
 
 [vo.vdpau]
 hwdec=vdpau
